// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders inline Form with label correctly 1`] = `
<form
  class="za-form za-form--inline za-form--label-right"
>
  <div
    class="za-form-item col-sm-4"
  >
    <label
      class="za-form-item__label"
    >
      类型
    </label>
    <div
      class="za-form-item__control"
    >
      <div
        class="zw-input zw-input--md zw-input--radius zw-input--bordered"
      >
        <input
          class="zw-input__inner"
          placeholder="请输入..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="za-form-item col-sm-4"
  >
    <label
      class="za-form-item__label"
    >
      来源
    </label>
    <div
      class="za-form-item__control"
    >
      <div
        class="zw-input zw-input--md zw-input--radius zw-input--bordered"
      >
        <input
          class="zw-input__inner"
          placeholder="请输入..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="za-form-item col-sm-4"
  >
    <label
      class="za-form-item__label"
    />
    <div
      class="za-form-item__control"
    >
      <button
        class="zw-button zw-button--success zw-button--radius"
        type="button"
      >
        <span>
          查询
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders inline Form with required fields and help correctly 1`] = `
<form
  class="za-form za-form--inline za-form--label-right"
>
  <div
    class="za-form-item col-sm-4"
  >
    <label
      class="za-form-item__label"
    >
      类型
    </label>
    <div
      class="za-form-item__control"
    >
      <div
        class="zw-input zw-input--md zw-input--radius zw-input--bordered"
      >
        <input
          class="zw-input__inner"
          placeholder="请输入..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="za-form-item col-sm-4"
  >
    <label
      class="za-form-item__label"
    >
      <span
        class="za-form-item--required"
      >
        <i
          class="zw-icon zw-icon--required zw-icon--default zw-icon--md"
          theme="default"
          type="required"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#required"
            />
          </svg>
        </i>
      </span>
      来源
    </label>
    <div
      class="za-form-item__control"
    >
      <div
        class="zw-input zw-input--md zw-input--radius zw-input--bordered"
      >
        <input
          class="zw-input__inner"
          placeholder="请输入..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="za-form-item col-sm-4"
  >
    <label
      class="za-form-item__label"
    />
    <div
      class="za-form-item__control"
    >
      <button
        class="zw-button zw-button--success zw-button--radius"
        type="button"
      >
        <span>
          查询
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders normal Form correctly 1`] = `
<form
  class="za-form za-form--horizontal za-form--label-right"
>
  <div
    class="za-form-item"
  >
    <label
      class="za-form-item__label"
    >
      账号
    </label>
    <div
      class="za-form-item__control"
    >
      <div
        class="zw-input zw-input--md zw-input--radius zw-input--bordered"
      >
        <input
          class="zw-input__inner"
          placeholder="请输入..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="za-form-item"
  >
    <label
      class="za-form-item__label"
    >
      密码
    </label>
    <div
      class="za-form-item__control"
    >
      <div
        class="zw-input zw-input--md zw-input--radius zw-input--bordered"
      >
        <input
          class="zw-input__inner"
          placeholder="请输入..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="za-form-item"
  >
    <div
      class="za-form-item__control"
    >
      <button
        class="zw-button zw-button--success zw-button--radius"
        type="button"
      >
        <span>
          登录
        </span>
      </button>
    </div>
  </div>
</form>
`;
